[package]
name = "ccal-rs"
version = "0.1.0"
description = "Displays Chinese calendar (Gregorian with Chinese dates)"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
anyhow = "1.0"
